# OptiSik

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  test.cpp
OptiSik/data/: derivative.h  expression.h  lumatrix.h  matrix.h  vector.h
OptiSik/optimizers/: common.h  gradientDescent.h  newtonSolver.h  simplexSolver.h
OptiSik/utils/: exception.h  mathUtils.h  stringUtils.h  traits.h
data/: lumatrix.h  matrix.h  vector.h
optimizers/: simplexSolver.h
tests/: autodiff_gtest.cpp  gradientDescent_gtest.cpp  lumatrix_gtest.cpp  matrix.test.cpp  matrix.test.h  matrix_gtest.cpp  simplexSolver.test.cpp  simplexSolver.test.h  simplexSolver_gtest.cpp  test_utils.h  vector.test.cpp  vector.test.h  vector_gtest.cpp
utils/: exception.h  mathUtils.h  stringUtils.h
